# auto_psycho

./: README.md  debug_db_path.py  env.example  pyproject.toml  run.py
documents/: TAT平台使用说明_中文.md
src/auto_psycho/: __init__.py  app.py  config.py
src/auto_psycho/analysis/: __init__.py  openai_analyzer.py  report_generator.py
src/auto_psycho/models/: __init__.py  analysis_result.py  experiment_session.py  participant.py  tat_response.py
src/auto_psycho/templates/: about.html  base.html  consent.html  continue.html  help.html  index.html  register.html  statistics.html
src/auto_psycho/templates/errors/: 404.html  500.html
src/auto_psycho/templates/experiment/: experiment.html  instructions.html  results.html
src/auto_psycho/utils/: __init__.py  session_manager.py
src/auto_psycho/views/: __init__.py  admin.py  api.py  experiment.py  main.py
